# SquidTasks

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _config.yml  index.md
documentation/: StandaloneIntegrationGuide.md  UE4IntegrationGuide.md  UE5IntegrationGuide.md
html/: _function_guard_8h_source.html  _task_8h_source.html  _task_f_s_m_8h_source.html  _task_manager_8h_source.html  _tasks_config_8h_source.html  _token_list_8h_source.html  annotated.html  annotated_dup.js  class_f_s_m_1_1_state_handle-members.html  class_f_s_m_1_1_state_handle.html  class_f_s_m_1_1_state_handle.js  class_function_guard-members.html  class_function_guard.html  class_function_guard.js  class_task-members.html  class_task.html  class_task.js  class_task_f_s_m-members.html  class_task_f_s_m.html  class_task_manager-members.html  class_task_manager.html  class_task_manager.js  class_token_list-members.html  class_token_list.html  class_token_list.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  group___awaiters.html  group___awaiters.js  group___config.html  group___config.js  group___function_guard.html  group___function_guard.js  group___task_f_s_m.html  (+30 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  groups_0.js  (+9 more)
include/: FunctionGuard.h  Task.h  TaskFSM.h  TaskManager.h  TaskTypes.h  TasksConfig.h  TokenList.h
include/Private/: TaskFSMPrivate.h  TaskPrivate.h  TasksCommonPrivate.h
include/Private/tl/: optional.hpp
samples/: SquidTasksSamples.sln
samples/Common/: TimeSystem.h
samples/Sample_Template/: CMakeLists.txt  Main.cpp  Sample_Template.vcxproj
samples/Sample_Tests/: CMakeLists.txt  Main.cpp  Sample_Tests.vcxproj  Sample_Tests.vcxproj.filters
samples/Sample_TextGame/: CMakeLists.txt  Main.cpp  Sample_TextGame.vcxproj  Sample_TextGame.vcxproj.filters  TextGame.h  TextInput.h
samples/Sample_TextGame/gamedata/: nyms.csv  riddles_enc.csv
unreal/Plugins/SquidTasks/: SquidTasks.uplugin
unreal/Plugins/SquidTasks/Source/SquidTasks/: SquidTasks.build.cs
unreal/Plugins/SquidTasks/Source/SquidTasks/Private/: SquidTasksLog.h  SquidTasksModule.cpp  TaskDemoActor.h  (+1 more)
(+9 files in other folders)
